--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+:root {
+  --global-width: 430px;
+  --main-color: #8fcc93;
+  --sub-color: #f6f6f6;
+  --button-color: #021508;
+  --text-color: #000000;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +28,7 @@ body,
 }
 
 #__container {
-  max-width: 430px;
+  max-width: var(--global-width);
   width: 100%;
   height: 100%;
   margin: 0 auto;
