--- a/components/common/Button/Button.module.scss
+++ b/components/common/Button/Button.module.scss
@@ -1,13 +1,25 @@
-@mixin Button($background, $border: none, $color: var(--text-color)) {
+@mixin RoundButton($background, $border: none, $color: var(--text-color)) {
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 44px;
+  height: 100%;
   border-radius: 32px;
   font-weight: 700;
   font-size: 16px;
   background-color: $background;
   border: $border;
   color: $color;
+}
+
+@mixin PrimaryButton {
+  @include RoundButton(var(--main-color));
+}
+
+@mixin SecondaryButton {
+  @include RoundButton(var(--white), 1px solid var(--main-color));
+}
+
+@mixin TertiaryButton {
+  @include RoundButton(var(--tertiary));
 }
