--- a/components/common/modal/modal.module.scss
+++ b/components/common/modal/modal.module.scss
@@ -5,10 +5,49 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 600;
+  overflow: hidden;
 }
 
 .inner {
+  width: 87%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 24px;
+  font-size: 16px;
   background-color: var(--white);
-  padding: 2rem;
-  border-radius: 1rem;
+  border-radius: 10px;
+}
+
+.message {
+  width: 100%;
+  overflow-wrap: break-word;
+  padding: 24px;
+}
+
+.buttonContainer {
+  display: flex;
+  height: 64px;
+  width: 100%;
+}
+
+.button {
+  font-size: 16px;
+  font-weight: 600;
+  flex-grow: 1;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  border-top: 1px solid var(--main-color);
+  border-right: 1px solid var(--main-color);
+
+  &:last-child {
+    border-right: none;
+  }
+
+  &.greenButton {
+    background-color: var(--main-color);
+  }
 }
