--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -2,9 +2,13 @@
   position: fixed;
   display: flex;
   flex-direction: row;
-  background-color: red;
-  width: 360px;
-  height: 54px;
+  //   background-color: red;
+  max-width: 380px;
+  width: 100%;
+  height: 78px;
+  padding-top: 24px;
+  border-bottom: 1px solid #333;
+
   .leftArrow {
     position: relative;
     width: 24px;
