--- a/components/common/modal/modal.module.scss
+++ b/components/common/modal/modal.module.scss
@@ -1,6 +1,6 @@
 .outer {
   position: absolute;
-  inset: 0 -24px;
+  inset: 0;
   background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
