--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -2,11 +2,12 @@
   position: fixed;
   display: flex;
   flex-direction: row;
-  max-width: 380px;
   width: 100%;
-  height: 78px;
-  padding-top: 24px;
-  border-bottom: 1px solid #333;
+  height: 54px;
+  max-width: 420px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom: 1px solid var(--main-color);
 
   .leftArrow {
     position: relative;
