--- a/components/common/modal/modal.module.scss
+++ b/components/common/modal/modal.module.scss
@@ -7,10 +7,11 @@
   align-items: center;
   font-weight: 600;
   overflow: hidden;
+  padding: 24px;
 }
 
 .inner {
-  width: 87%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
