--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -1,20 +1,21 @@
 .header {
   position: fixed;
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: 54px;
-  max-width: 420px;
+  max-width: var(--global-width);
   left: 50%;
   transform: translateX(-50%);
   border-bottom: 1px solid var(--main-color);
 
   .leftArrow {
-    position: relative;
+    position: absolute;
     width: 24px;
     height: 24px;
     margin: auto 0;
-    left: 12px;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
   }
   .imageBox {
     position: relative;
