--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,7 +46,7 @@ body,
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  padding: 24px;
+  padding: 0 24px;
   border: 1px solid #ddd;
   border-top: none;
   border-bottom: none;
