--- a/components/common/Button/Button.module.scss
+++ b/components/common/Button/Button.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
   height: 100%;
   border-radius: 32px;
   font-weight: 700;
