--- a/components/start-family/introduce-text/introduce-text.module.scss
+++ b/components/start-family/introduce-text/introduce-text.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 17px;
-  padding-top: 72px;
+  padding-top: calc(54px + 72px);
   h2 {
     font-size: 24px;
     span {
