design: 날짜 폰트 색상 수정

--- a/components/calendar/calendar-container.module.scss
+++ b/components/calendar/calendar-container.module.scss
@@ -8,8 +8,9 @@
   text-align: center;
   padding: 8px;
   font-size: 18px;
+  color: var(--text-color);
 
   &.red {
-    color: red;
+    color: var(--red);
   }
 }
