--- a/components/common/nav/nav-list/nav-list.module.scss
+++ b/components/common/nav/nav-list/nav-list.module.scss
@@ -34,8 +34,7 @@
         justify-content: center;
         width: 60px;
         height: 60px;
-        background-color: #fff;
-        box-shadow: 0 -20px 20px 0 rgba(143, 204, 147, 0.1);
+        background-color: var(--white);
         svg {
           position: absolute;
           top: 12px;
