--- a/components/login/kakao-button/kakao-button.module.scss
+++ b/components/login/kakao-button/kakao-button.module.scss
@@ -1,4 +1,4 @@
-@import '/components/common/button/button.module.scss';
+@import '../../common/button/Button.module.scss';
 
 .kakaoButton {
   @include roundButton(var(--kakao-background), var(--kakao-color));
