design: globals.css에 달력 회색, 빨강 색상 추가

--- a/components/calendar/calendar-container.module.scss
+++ b/components/calendar/calendar-container.module.scss
@@ -8,14 +8,14 @@
   text-align: center;
   font-size: 14px;
   font-weight: 500;
-  color: #9e9e9e;
+  color: var(--text-color-gray);
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 8px;
 
   &.red {
-    color: #e75852;
+    color: var(--calendar-red);
   }
 
   .date {
