--- a/pages/calendar/calendar.module.scss
+++ b/pages/calendar/calendar.module.scss
@@ -1,3 +1,10 @@
 .outer {
   padding: 54px 0;
 }
+
+.date {
+  color: var(--text-color-gray);
+  font-size: 16px;
+  width: 100%;
+  margin-top: 27px;
+}
