--- a/components/start-family/introduce-text/introduce-text.module.scss
+++ b/components/start-family/introduce-text/introduce-text.module.scss
@@ -4,9 +4,13 @@
   gap: 17px;
   padding-top: calc(54px + 72px);
   h2 {
+    font-family: 'LaundryGothic';
     font-size: 24px;
     span {
+      font-family: 'LaundryGothic';
+      font-weight: 400;
       font-size: 16px;
+      line-height: 26px;
     }
   }
   p {
