design: todo 아이콘 플렉스 박스 생성

--- a/components/calendar/calendar-container.module.scss
+++ b/components/calendar/calendar-container.module.scss
@@ -37,6 +37,12 @@
   }
 }
 
+.todoIconContainer {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+
 .todoIcon {
   width: 4px;
   height: 4px;
