--- a/components/calendar/calendar-todo.module.scss
+++ b/components/calendar/calendar-todo.module.scss
@@ -3,8 +3,11 @@
   margin-top: 15px;
   gap: 14px;
   padding: 20px;
-  border: 1px solid black;
   border-left: 4px solid var(--main-color);
+
+  &:hover {
+    background-color: #fafafa;
+  }
 }
 
 .todo {
