--- a/components/common/Input/main-input/main-input.module.scss
+++ b/components/common/Input/main-input/main-input.module.scss
@@ -1,23 +1,11 @@
+@import '../mixins.scss';
+
 .container {
-  display: flex;
-  flex-direction: column;
-  gap: 28px;
-  .label {
-    display: flex;
-    gap: 10px;
-    span {
-      color: var(--main-color);
-      width: 2px;
-      height: 18px;
-    }
+  @include container;
+
+  .input {
+    @include input;
   }
-}
-.input {
-  outline: none;
-  height: 50px;
-  padding: 12px 11px;
-  border-width: 0 0 1.5px;
-  border-color: var(--main-color);
 }
 
 .error {
