[#48] fix: date input 스타일 수정

--- a/components/common/Input/main-input/main-input.module.scss
+++ b/components/common/Input/main-input/main-input.module.scss
@@ -5,9 +5,11 @@
 
   .input {
     @include input;
+    height: 50px;
+    padding: 12px 11px;
   }
 }
 
 .error {
-  color: var(--red);
+  @include error;
 }
