--- a/components/common/Input/date-input/date-input.module.scss
+++ b/components/common/Input/date-input/date-input.module.scss
@@ -3,25 +3,29 @@
 .container {
   @include container;
   .inputContainer {
+    padding: 11px 12px;
     display: flex;
-    justify-content: space-evenly;
+    gap: 3px;
     border-bottom: 1.5px solid var(--main-color);
+
     span {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 45px;
-      font-weight: 100;
-      height: 100%;
+      font-size: 14px;
+      font-weight: 400;
     }
   }
   .input {
     @include input;
     border: 0;
-    max-width: calc(100% / 5);
+    text-align: center;
+  }
+  .year {
+    width: 40px;
+  }
+  .day,
+  .month {
+    width: 25px;
   }
 }
-
 .error {
-  color: var(--red);
+  @include error;
 }
