--- a/components/common/Input/mixins.scss
+++ b/components/common/Input/mixins.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 28px;
-
+  position: relative;
   .label {
     display: flex;
     gap: 10px;
@@ -17,8 +17,14 @@
 
 @mixin input {
   outline: none;
-  height: 50px;
-  padding: 12px 11px;
   border-width: 0 0 1.5px;
   border-color: var(--main-color);
+}
+
+@mixin error {
+  position: relative;
+  bottom: 20px;
+  color: var(--red);
+  font-size: 12px;
+  margin-bottom: 10px;
 }
