--- a/pages/test/button-test/index.module.scss
+++ b/pages/test/button-test/index.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   width: 100%;
   color: var(--text-color);
-  border-radius: 32px;
+  // border-radius: 32px;
   overflow: hidden;
   // border-top: 1px solid var(--main-color);
-  border: 1px solid var(--text-color);
+  // border: 1px solid var(--text-color);
 }
