--- a/components/login/kakao-button/kakao-button.module.scss
+++ b/components/login/kakao-button/kakao-button.module.scss
@@ -1,6 +1,9 @@
-@import '/components/common/common-button/common-button.module.scss';
+@import '/components/common/button/button.module.scss';
 
 .kakaoButton {
-  @include roundButton(var(--kakao-background), var(--kakao-color));
+  @include button();
+  background-color: var(--kakao-background);
+  color: var(--kakao-color);
   gap: 14px;
+  border-radius: 32px;
 }
