[#49] Fix: css 클래스명 변경

--- a/components/common/button/button.module.scss
+++ b/components/common/button/button.module.scss
@@ -22,7 +22,7 @@
   @include button();
   background-color: var(--tertiary);
 }
-.empty {
+.default {
   @include button();
   background-color: var(--white);
 }
