[#50] Feat: Calendar 컴파운드 패턴 적용 및 리팩토링

--- a/components/calendar-compound/components/month/calendar-month.module.scss
+++ b/components/calendar-compound/components/month/calendar-month.module.scss
@@ -1,7 +1,12 @@
-.month {
+.month-list {
   font-size: 24px;
   font-weight: bold;
   color: #bdbdbd;
+  margin: 8px 0 20px;
+
+  .month {
+    width: max-content;
+  }
 
   .selected {
     color: #000000;
