--- a/styles/color.css
+++ b/styles/color.css
@@ -10,5 +10,6 @@
   --google-color: #757575;
   --google-border: #eeeeee;
   --red: #d6173a;
+  --calendar-red: #e75852;
   --nav-text-color: #9e9e9e;
 }
