--- a/styles/color.css
+++ b/styles/color.css
@@ -3,6 +3,7 @@
   --main-color: #8fcc93;
   --button-color: #021508;
   --text-color: #000;
+  --text-color-gray: #9e9e9e;
   --white: #fff;
   --tertiary: #f6f6f6;
   --kakao-background: #f8e049;
