--- a/components/calendar/calendar-todo.module.scss
+++ b/components/calendar/calendar-todo.module.scss
@@ -3,7 +3,9 @@
   margin-top: 15px;
   gap: 14px;
   padding: 20px;
-  border-left: 4px solid var(--main-color);
+  border: 1px solid var(--main-color);
+  border-radius: 10px;
+  height: 76px;
 
   &:hover {
     background-color: #fafafa;
@@ -14,7 +16,6 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  gap: 7px;
 }
 
 .checkContainer {
