--- a/styles/color.css
+++ b/styles/color.css
@@ -4,6 +4,8 @@
   --button-color: #021508;
   --text-color: #000;
   --text-color-gray: #9e9e9e;
+  --text-color-time-selected: #a4a19d;
+  --text-color-time-selector: #d9d3c7;
   --white: #fff;
   --tertiary: #f6f6f6;
   --kakao-background: #f8e049;
