[#44] Feat: 일정 추가 페이지 날짜/시간 모달 여는 버튼 제작

--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -89,6 +89,15 @@
   width: 100%;
 }
 
+.todoDateText {
+  background-color: var(--main-color);
+  padding: 4px 10px;
+  font-size: 12px;
+  line-height: 20px;
+  color: var(--white);
+  border-radius: 4px;
+}
+
 .todoDateSelector {
   display: flex;
 }
