--- a/components/calendar/calendar-modal-time-selector.module.scss
+++ b/components/calendar/calendar-modal-time-selector.module.scss
@@ -9,3 +9,30 @@
     color: var(--text-color-time-selected);
   }
 }
+
+.selector {
+  display: flex;
+  width: 100%;
+  height: 130px;
+  font-size: 14px;
+  color: var(--text-color-time-selected);
+}
+
+.scroller {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  text-align: center;
+  scrollbar-width: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  :first-child {
+    margin-top: 50%;
+  }
+
+  :last-child {
+    margin-bottom: 50%;
+  }
+}
