--- a/pages/start-family/index.module.scss
+++ b/pages/start-family/index.module.scss
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 313px;
+  padding-top: 126px;
+
+  .titleBox {
+    display: flex;
+    flex-direction: column;
+  }
 }
