[#64] Feat: 클립보드, 카카오 공유하기 기능 구현 완료

--- a/styles/color.css
+++ b/styles/color.css
@@ -12,5 +12,5 @@
   --google-border: #eeeeee;
   --red: #d6173a;
   --calendar-red: #e75852;
-  --nav-text-color: #9e9e9e;
+  --clipboard-color: #e9e9eb;
 }
