--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@ button {
   font: inherit;
   color: inherit;
   cursor: pointer;
-  outline: none;
+  /* outline: none; */
   box-shadow: none;
 }
 html,
