[#44] Design: 시간 선택부 선택된 시각 확대
옵저버 루트 보더 삭제

--- a/components/calendar/calendar-modal-time-selector.module.scss
+++ b/components/calendar/calendar-modal-time-selector.module.scss
@@ -22,7 +22,6 @@
 .observerRoot {
   display: flex;
   align-items: center;
-  border: 1px solid black;
   height: 20px;
   width: 100%;
 }
@@ -50,4 +49,9 @@
 
 .scrollItem {
   scroll-snap-align: center;
+}
+
+.magnify {
+  font-size: 20px;
+  color: var(--main-color);
 }
