--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -96,6 +96,7 @@
   line-height: 20px;
   color: var(--white);
   border-radius: 4px;
+  flex-shrink: 0;
 }
 
 .todoDateSelector {
@@ -109,19 +110,21 @@
   font-size: 14px;
   border: none;
   align-self: last baseline;
+  width: fit-content;
 }
 
-.year {
-  width: 36px;
+.year,
+.month {
+  &::after {
+    content: '-';
+  }
 }
 
-.month,
 .date,
-.hour,
-.minute {
-  width: 20px;
+.ampm {
+  margin-right: 8px;
 }
 
-.date {
-  margin-right: 12px;
+.hour::after {
+  content: ':';
 }
