--- a/components/common/Input/mixins.scss
+++ b/components/common/Input/mixins.scss
@@ -1,7 +1,6 @@
 @mixin container {
   display: flex;
   flex-direction: column;
-  gap: 28px;
   position: relative;
   .label {
     display: flex;
@@ -22,9 +21,7 @@
 }
 
 @mixin error {
-  position: relative;
-  bottom: 20px;
   color: var(--red);
   font-size: 12px;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
