--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
   --kakao-color: #371c1d;
   --google-color: #757575;
   --google-border: #eeeeee;
-  --red: #d6173a;
+  --red: #e74133;
   --nav-text-color: #9e9e9e;
 }
 
