[#44] Feat: 스크롤 속도 조절
시간 설정 스크롤러 한번에 여러 칸 돌아가는 것을 한 칸씩 움직이도록 수정.
scroll-behavior: smooth 스타일 추가

--- a/components/calendar/time-scroller.module.scss
+++ b/components/calendar/time-scroller.module.scss
@@ -9,6 +9,7 @@
   justify-content: flex-start;
   gap: 5px;
   scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 
   :first-child {
     margin-top: calc(50% - 7px);
