[#55] fix: input focus design 수정

--- a/components/common/select/select.module.scss
+++ b/components/common/select/select.module.scss
@@ -25,6 +25,9 @@
           color: #959595;
           font-size: 14px;
         }
+        &:focus {
+          outline: none;
+        }
       }
       .inputActive {
         background-color: var(--white);
