--- a/pages/login/index.module.scss
+++ b/pages/login/index.module.scss
@@ -1,6 +1,6 @@
-.article {
+.section {
   display: flex;
   flex-direction: column;
-  padding-top: 277px;
+  padding: 277px 24px 0;
   gap: 127px;
 }
