--- a/pages/start-family/index.module.scss
+++ b/pages/start-family/index.module.scss
@@ -1,8 +1,8 @@
-.article {
+.section {
   display: flex;
   flex-direction: column;
   gap: 313px;
-  padding-top: 126px;
+  padding: 126px 24px 0;
   .titleBox {
     display: flex;
     flex-direction: column;
