--- a/components/calendar-compound/components/year/calendar-year.module.scss
+++ b/components/calendar-compound/components/year/calendar-year.module.scss
@@ -1,9 +1,14 @@
 .calendar-year-list {
   display: flex;
   gap: 0 8px;
-}
 
-.calendar-year-item {
-  font-weight: 700;
-  color: #9e9e9e;
+  .calendar-year-item {
+    font-weight: 700;
+    color: #9e9e9e;
+    width: max-content;
+
+    &.selected {
+      color: #000000;
+    }
+  }
 }
