--- a/components/calendar/calendar-todo.module.scss
+++ b/components/calendar/calendar-todo.module.scss
@@ -32,29 +32,17 @@
   width: 0;
 }
 
-.checkmark {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
+.checkmarkContainer {
   border: 2px solid var(--text-color-gray);
   border-radius: 9999px;
-
-  &:after {
-    content: '';
-    position: absolute;
-    display: none;
-    top: 10%;
-    left: 30%;
-    width: 30%;
-    height: 50%;
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
-  }
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.checkContainer .checkbox:checked ~ .checkmark {
+.checkContainer .checkbox:checked ~ .checkmarkContainer {
   background-color: var(--main-color);
   border: 1px solid var(--main-color);
 
