[#63] Feat: 버튼 로딩 처리 구현 및 버튼 스타일 추가

--- a/components/common/button/button.module.scss
+++ b/components/common/button/button.module.scss
@@ -26,3 +26,8 @@
   @include button();
   background-color: var(--white);
 }
+.disabled {
+  @include button();
+  background-color: var(--disabled-color);
+  color: var(--white);
+}
