--- a/components/growth/list/list.module.scss
+++ b/components/growth/list/list.module.scss
@@ -1,7 +1,7 @@
 .container {
   display: block;
   position: relative;
-  width: 312px;
+  width: 100%;
   height: 149px;
   border: 1px solid var(--main-color);
   border-radius: 10px;
