--- a/styles/color.css
+++ b/styles/color.css
@@ -7,6 +7,7 @@
   --text-color-time-selected: #a4a19d;
   --text-color-time-selector: #d9d3c7;
   --disabled-button: #c8c8c8;
+  --todo-category: #d9d9d9;
   --white: #fff;
   --tertiary: #f6f6f6;
   --kakao-background: #f8e049;
