--- a/components/calendar-monthly/pet-radio.module.scss
+++ b/components/calendar-monthly/pet-radio.module.scss
@@ -1,9 +1,15 @@
 .petLabel {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.petImage {
+  position: relative;
   width: 64px;
   height: 64px;
-  cursor: pointer;
-  position: relative;
 }
 
 .petInput {
@@ -23,4 +29,8 @@
 }
 .petInput:checked ~ .petOff {
   display: none;
+}
+
+.petName {
+  font-weight: 400;
 }
