[#79] Feat: 오늘 날짜로 리셋해주는 컴포넌트 및 레이아웃 추가

--- a/components/calendar-compound/components/month/calendar-month.module.scss
+++ b/components/calendar-compound/components/month/calendar-month.module.scss
@@ -3,6 +3,7 @@
   font-weight: bold;
   color: #bdbdbd;
   margin: 8px 0 20px;
+  margin-left: 24px !important;
 
   .month {
     width: max-content;
