--- a/components/calendar-compound/components/year/calendar-year.module.scss
+++ b/components/calendar-compound/components/year/calendar-year.module.scss
@@ -1,6 +1,7 @@
 .calendar-year-list {
   display: flex;
   gap: 0 8px;
+  margin-left: 24px !important;
 
   .calendar-year-item {
     font-weight: 700;
