--- a/components/common/select/select.module.scss
+++ b/components/common/select/select.module.scss
@@ -41,6 +41,7 @@
       }
     }
     .buttonActive {
+      z-index: 1;
       position: absolute;
       background-color: var(--white);
       border: 1px solid var(--text-color-gray);
