[#70] design: 성장기록 메인 화면 스크롤 추가

--- a/components/growth/list/list-footer/list-footer.module.scss
+++ b/components/growth/list/list-footer/list-footer.module.scss
@@ -1,9 +1,7 @@
 .footer {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
   display: flex;
   gap: 17px;
+  justify-content: flex-end;
   .container {
     display: flex;
     align-items: center;
