--- a/pages/growth/growth.module.scss
+++ b/pages/growth/growth.module.scss
@@ -14,4 +14,11 @@
     font-weight: 600;
     color: #a9a9a9;
   }
+  .listContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    overflow-y: auto;
+    max-height: 558px;
+  }
 }
