--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,6 @@
 @import './color.css';
 @import './font.css';
 
-@font-face {
-  font-family: 'LaundryGothic';
-  src: url('/fonts/LaundryGothic_subset_Bold.woff2');
-  font-weight: 700;
-}
-@font-face {
-  font-family: 'LaundryGothic';
-  src: url('/fonts/LaundryGothic_subset_Regular.woff2');
-  font-weight: 400;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -44,7 +33,7 @@ body,
 #__container {
   max-width: var(--global-width);
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: 0 auto;
   border: 1px solid #ddd;
   border-top: none;
