[#44] Refactor: 달력 일정 개수 표시 아이콘 렌더링 방식 변경
map 메서드 중첩 없애고 Array 객체만 생성

--- a/components/calendar-monthly/calendar-container.module.scss
+++ b/components/calendar-monthly/calendar-container.module.scss
@@ -40,8 +40,9 @@
 
 .todoIconContainer {
   display: flex;
-  justify-content: space-around;
-  width: 50%;
+  justify-content: center;
+  gap: 4px;
+  height: 4px;
 }
 
 .todoIcon {
