--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -64,14 +64,14 @@
 
 .categorySelectorInner {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   gap: 16px;
+  flex-wrap: wrap;
   position: relative;
 }
 
 .categoryLabel {
-  width: 100%;
   text-align: center;
 }
 
@@ -87,7 +87,7 @@
   cursor: pointer;
   background-color: var(--todo-category);
   border-radius: 10px;
-  margin: 0 auto 8px;
+  margin: 0 0 8px;
 }
 
 .categoryInput:checked ~ .categoryIcon {
