[#73] Feat: 반려동물 추가 상수 파일 변경 및 이미지 초기값 설정

--- a/components/common/select/select.module.scss
+++ b/components/common/select/select.module.scss
@@ -9,7 +9,7 @@
     .button {
       position: relative;
       background-color: var(--tertiary);
-      width: 312px;
+      width: 100%;
       border-radius: 10px;
       text-align: left;
       padding: 0 17px;
