--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,13 +37,13 @@ html,
 body,
 #__wrap,
 #__next {
-  height: 100%;
+  min-height: 100vh;
 }
 
 #__container {
   max-width: var(--global-width);
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   margin: 0 auto;
   border: 1px solid #ddd;
   border-top: none;
