[#87] Fix: font cdn 제거 및 header, nav, svg css 수정

--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -1,4 +1,6 @@
 .header {
+  z-index: 1;
+  background-color: var(--white);
   position: fixed;
   display: flex;
   width: 100%;
@@ -7,7 +9,8 @@
   left: 50%;
   transform: translateX(-50%);
   border-bottom: 1px solid var(--main-color);
-
+  border-left: 1px solid #ddd;
+  border-right: 1px solid #ddd;
   .leftArrow {
     position: absolute;
     width: 24px;
