--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -155,10 +155,9 @@
   background-color: var(--main-color);
   border-radius: 9999px;
   margin-top: 30px;
+}
 
-  &:disabled {
-    background-color: var(--disabled-button);
-    color: var(--white);
-    cursor: default;
-  }
+.disabled {
+  background-color: var(--disabled-button);
+  color: var(--white);
 }
