--- a/components/kebab/kebab.module.scss
+++ b/components/kebab/kebab.module.scss
@@ -1,3 +1,7 @@
+.dropdown-menu {
+  position: relative;
+}
+
 .kebab {
   position: relative;
   width: 24px;
@@ -6,6 +10,9 @@
 
 .dropdown-menu__content {
   position: absolute;
+  top: 100%;
+  right: 0;
+  width: max-content;
   display: flex;
   flex-direction: column;
   gap: 5px 0;
