--- a/components/kebab/kebab.module.scss
+++ b/components/kebab/kebab.module.scss
@@ -11,7 +11,7 @@
 .dropdown-menu__content {
   position: absolute;
   top: 100%;
-  right: 0;
+  left: 0;
   width: max-content;
   display: flex;
   flex-direction: column;
