--- a/components/common/add-button/add-button.module.scss
+++ b/components/common/add-button/add-button.module.scss
@@ -1,9 +1,9 @@
 .outer {
   width: 50px;
   height: 50px;
-  position: absolute;
+  position: fixed;
   background-color: var(--main-color);
-  right: 25px;
+  right: calc(50% - var(--global-width) / 2 + 25px);
   bottom: 84px;
   border-radius: 9999px;
   display: flex;
