--- a/components/family/diary/family-diary-contents.module.scss
+++ b/components/family/diary/family-diary-contents.module.scss
@@ -1,9 +1,3 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .diary-card {
   width: 242px;
   border: 1px solid var(--main-color);
@@ -14,12 +8,12 @@
   flex-direction: column;
   gap: 10px 0;
 
-  &:after {
-    content: url('/images/family/ballon.svg');
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%, -1px);
+  &.primary {
+    border: 1px solid var(--main-color);
+  }
+
+  &.empty {
+    border: 1px solid var(--todo-category);
   }
 
   &__profile {
@@ -42,13 +36,11 @@
   }
 }
 
-.diary-image {
-  width: 82px;
-  height: 96px;
-  display: flex;
-  justify-content: center;
-  position: relative;
-  margin-top: 32px;
+.ballon {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -1px);
 }
 
 /*=============================================
