[#44] Design: 겹치는 글로벌 색상 제거
color.css #c8c8c8 색상 하나만 남겼습니다

--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -161,6 +161,6 @@
 }
 
 .disabled {
-  background-color: var(--disabled-button);
+  background-color: var(--disabled-color);
   color: var(--white);
 }
