--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -6,6 +6,7 @@
   border: 1px solid var(--main-color);
   border-radius: 10px;
   height: 76px;
+  position: relative;
 
   &:hover {
     background-color: #fafafa;
@@ -18,9 +19,20 @@
   flex-grow: 1;
 }
 
+.kebabCheck {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  top: -12px;
+  gap: 4px;
+}
+
 .checkContainer {
-  width: 24px;
-  height: 24px;
+  flex-shrink: 0;
+  display: block;
+  width: 20px;
+  height: 20px;
   position: relative;
   align-self: center;
   cursor: pointer;
