[#44] Feat: 오늘 날짜로 돌아가기 버튼 구현

--- a/pages/calendar/calendar.module.scss
+++ b/pages/calendar/calendar.module.scss
@@ -1,3 +1,13 @@
 .outer {
   padding: 19px 24px 100px;
 }
+
+.yearContainer {
+  display: flex;
+}
+
+.resetToday {
+  color: var(--main-color);
+  text-decoration: underline;
+  cursor: pointer;
+}
