--- a/components/diaries/diary-create/diary-create.module.scss
+++ b/components/diaries/diary-create/diary-create.module.scss
@@ -21,6 +21,32 @@
   }
 }
 
+.weather {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 12px;
+  font-size: 14px;
+  color: var(--text-color-gray);
+}
+.weatherIcons {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+
+  button {
+    height: 40px;
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
+
 .submit {
   width: 100%;
   padding: 14px;
