--- a/components/diaries/diary-create/diary-create.module.scss
+++ b/components/diaries/diary-create/diary-create.module.scss
@@ -1,16 +1,17 @@
+.container {
+  padding: 54px 0 100px;
+}
+
 .content {
   font-size: 14px;
   display: block;
   width: 100%;
   height: 160px;
+  padding: 0 24px;
   margin-top: 22px;
   margin-bottom: 30px;
+  border: none;
   resize: none;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 1px solid #d5d9dc;
-
   &::placeholder {
     font-weight: 500;
     line-height: 21px;
@@ -19,6 +20,17 @@
   &:focus {
     outline: none;
   }
+}
+
+.division {
+  margin: 0px auto 30px;
+  width: 382px;
+  border: 1px solid #d5d9dc;
+}
+
+.weatherContainer {
+  padding: 0 24px;
+  margin-bottom: 30px;
 }
 
 .weather {
@@ -32,7 +44,6 @@
 .weatherIcons {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
 
   button {
     height: 40px;
@@ -47,13 +58,38 @@
   }
 }
 
+.imagesContainer {
+  display: flex;
+  gap: 10px;
+  padding: 0 24px;
+  margin-bottom: 30px;
+  overflow-x: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.imagesContainer::-webkit-scrollbar {
+  display: none;
+}
+
+.images {
+  width: 110px;
+  height: 110px;
+  object-fit: cover;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.button {
+  padding: 0 24px;
+}
+
 .submit {
   width: 100%;
   padding: 14px;
   color: var(--button-color);
   background-color: var(--main-color);
   border-radius: 9999px;
-  margin-top: 30px;
 }
 
 .disabled {
@@ -62,8 +98,9 @@
 }
 
 .error {
-  color: var(--input-error);
-  font-weight: 400;
+  padding: 0 24px;
   margin-top: 8px;
   margin-bottom: 30px;
+  font-weight: 400;
+  color: var(--input-error);
 }
