--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -7,6 +7,7 @@
   border-radius: 10px;
   height: 76px;
   position: relative;
+  color: var(--text-color);
 
   &:hover {
     background-color: #fafafa;
