--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -8,9 +8,14 @@
   height: 76px;
   position: relative;
   color: var(--text-color);
+  cursor: pointer;
 
   &:hover {
     background-color: #fafafa;
+  }
+
+  &:last-of-type {
+    margin-bottom: 50px;
   }
 }
 
