--- a/pages/growth/create/create.module.scss
+++ b/pages/growth/create/create.module.scss
@@ -1,3 +1,91 @@
 .wrapper {
-  padding: 54px 24px 0;
+  padding: 84px 24px 100px;
+  position: relative;
+  .petSelector {
+    color: var(--text-color-gray);
+    letter-spacing: 0.64px;
+    .petLabelContainer {
+      padding-top: 16px;
+      display: flex;
+      gap: 17px;
+    }
+  }
+  .error {
+    color: var(--input-error);
+    font-weight: 400;
+    margin-bottom: 8px;
+    font-size: 14px;
+  }
+
+  .division {
+    border-bottom: 5px solid #f5f5f5;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-top: 8px;
+  }
+  .memo {
+    font-size: 14px;
+    display: block;
+    width: 100%;
+    height: 160px;
+    margin: 22px 0;
+    resize: none;
+    border: none;
+
+    &::placeholder {
+      font-family: 'LaundryGothic';
+      color: var(--text-color-gray);
+    }
+  }
+  .categorySelectorOuter {
+    padding: 30px 0;
+    margin: 0 0 30px;
+    border-bottom: 1px solid var(--text-color-time-selector);
+    border-top: 1px solid var(--text-color-time-selector);
+  }
+
+  .categorySelectorInner {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 16px;
+    flex-wrap: wrap;
+    position: relative;
+  }
+
+  .categoryLabel {
+    text-align: center;
+  }
+
+  .categoryInput {
+    position: absolute;
+    width: 0;
+    height: 0;
+  }
+  .categoryInput ~ .categoryIcon {
+    width: 66px;
+    height: 66px;
+    cursor: pointer;
+    background-color: var(--todo-category);
+    border-radius: 10px;
+    margin: 0 0 8px;
+  }
+
+  .categoryInput:checked ~ .categoryIcon {
+    background-color: var(--main-color);
+  }
+  .submit {
+    width: 100%;
+    padding: 14px;
+    color: var(--button-color);
+    background-color: var(--main-color);
+    border-radius: 9999px;
+    margin-top: 30px;
+  }
+
+  .disabled {
+    background-color: var(--disabled-color);
+    color: var(--white);
+  }
 }
