--- a/components/start-pet/finish/share-modal/share-modal.module.scss
+++ b/components/start-pet/finish/share-modal/share-modal.module.scss
@@ -2,16 +2,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 29px;
   width: 100%;
-  p {
+  .shareTitle {
     padding-top: 36px;
     font-weight: 500;
+    text-align: center;
+    margin-bottom: 29px;
+    &:has(.clipboardSuccess) {
+      margin-bottom: 15px;
+    }
+    .clipboardSuccess {
+      display: block;
+      color: #32a753;
+      font-size: 16px;
+      font-weight: 500;
+      margin-top: 4px;
+    }
   }
   ul {
     display: flex;
     justify-content: center;
     gap: 20px;
+    margin-bottom: 29px;
   }
   .buttonBox {
     width: 100%;
