--- a/components/start-pet/file-image/file-image.module.scss
+++ b/components/start-pet/file-image/file-image.module.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 50%;
-  overflow: hidden;
+  img {
+    border-radius: 50%;
+    border: 1px solid var(--pet-border);
+  }
 }
