--- a/components/start-pet/finish/pets-list-item/pets-list-item.module.scss
+++ b/components/start-pet/finish/pets-list-item/pets-list-item.module.scss
@@ -4,6 +4,7 @@
   height: 100%;
   img {
     border-radius: 50%;
+    border: 1px solid var(--pet-border);
   }
   .modifyLink {
     position: absolute;
