--- a/components/common/button/button.module.scss
+++ b/components/common/button/button.module.scss
@@ -1,11 +1,13 @@
 @mixin button {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
   font-weight: 700;
-  font-size: 16px;
+  font-size: inherit;
+  color: inherit;
   border: none;
 }
 
