--- a/components/calendar-monthly/calendar-modal.module.scss
+++ b/components/calendar-monthly/calendar-modal.module.scss
@@ -1,6 +1,13 @@
 .outer {
   width: 100%;
-  padding: 22px 12px;
+  padding: 0 12px 24px;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
 }
 
 .todoIconContainer {
