--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -152,15 +152,6 @@
 }
 
 .submit {
-  width: 100%;
-  padding: 14px;
-  color: var(--button-color);
-  background-color: var(--main-color);
-  border-radius: 9999px;
   margin-top: 30px;
-}
-
-.disabled {
-  background-color: var(--disabled-color);
-  color: var(--white);
+  height: 46px;
 }
