[#115] Design: 검색 페이지 작성자 필터 ui 구현

--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -28,3 +28,18 @@
   display: flex;
   gap: 6px;
 }
+
+.members {
+  display: flex;
+  gap: 8px;
+}
+
+.member {
+  background-color: var(--white);
+  width: fit-content;
+  padding: 8px 19px 8px 8px;
+  border: 2px solid var(--pet-border);
+  border-radius: 9999px;
+  color: var(--pet-border);
+  cursor: pointer;
+}
