[#118] Feat: 이미지 미리보기 기능 추가

--- a/components/mypage/profile/my-page-profile.module.scss
+++ b/components/mypage/profile/my-page-profile.module.scss
@@ -29,6 +29,14 @@
     right: 0;
     bottom: 0;
   }
+
+  .profile-input {
+    display: none;
+  }
+
+  .profile-label {
+    cursor: pointer;
+  }
 }
 
 .profile-name {
