[#115] Refactor: 검색 페이지 인풋 수정
PetRadio 를 checkbox로도 활용할 수 있도록 수정
작성자 필터 선택 인풋에 label 적용

--- a/pages/search/search.module.scss
+++ b/pages/search/search.module.scss
@@ -37,9 +37,16 @@
 .member {
   background-color: var(--white);
   width: fit-content;
-  padding: 8px 19px 8px 8px;
+  padding: 8px;
   border: 2px solid var(--pet-border);
   border-radius: 9999px;
   color: var(--pet-border);
   cursor: pointer;
+  position: relative;
+}
+
+.checkbox {
+  position: absolute;
+  width: 0;
+  height: 0;
 }
