--- a/components/search/search-bar.module.scss
+++ b/components/search/search-bar.module.scss
@@ -1,7 +1,18 @@
+.searchBar {
+  position: relative;
+}
+
 .input {
   width: 100%;
   background-color: var(--tertiary);
   border: none;
   border-radius: 9999px;
   padding: 8px 16px;
+}
+
+.submit {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-40%);
 }
