--- a/components/mypage/family/add-family/add-family.module.scss
+++ b/components/mypage/family/add-family/add-family.module.scss
@@ -2,4 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  .openModal {
+    width: 20px;
+    height: 20px;
+  }
 }
