--- a/components/growth/profile/profile.module.scss
+++ b/components/growth/profile/profile.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   align-items: center;
   gap: 4px;
-
+  .image {
+    border-radius: 9999px;
+  }
   .name {
     font-size: 14px;
     color: var(--text-color-gray);
