[#115] Feat: 검색 페이지 필터 선택 여부에 따라 ui 적용

--- a/components/search/search-member-filter.module.scss
+++ b/components/search/search-member-filter.module.scss
@@ -7,6 +7,12 @@
   color: var(--pet-border);
   cursor: pointer;
   position: relative;
+
+  &.selected {
+    border: 2px solid var(--main-color);
+    background-color: var(--main-color);
+    color: var(--white);
+  }
 }
 
 .checkbox {
