--- a/components/search/search-filter.module.scss
+++ b/components/search/search-filter.module.scss
@@ -9,6 +9,12 @@
   color: var(--pet-border);
   cursor: pointer;
   font-size: 14px;
+
+  &.selected {
+    background-color: var(--main-color);
+    border: 2px solid var(--main-color);
+    color: var(--white);
+  }
 }
 
 .input {
