[#82] feat: 유효성 검사 에러 추가

--- a/pages/growth/create/category-inputs/category-inputs.module.scss
+++ b/pages/growth/create/category-inputs/category-inputs.module.scss
@@ -17,4 +17,10 @@
     border-color: var(--main-color);
     padding: 12px 11px;
   }
+  .error {
+    color: var(--input-error);
+    font-weight: 400;
+    margin-top: 8px;
+    font-size: 14px;
+  }
 }
