[#82] design: memo placeholder 디자인 변경

--- a/pages/growth/create/create.module.scss
+++ b/pages/growth/create/create.module.scss
@@ -34,7 +34,7 @@
     border: none;
 
     &::placeholder {
-      font-family: 'LaundryGothic';
+      line-height: 21px;
       color: var(--text-color-gray);
     }
   }
