--- a/components/kebab/kebab.module.scss
+++ b/components/kebab/kebab.module.scss
@@ -11,7 +11,8 @@
 .dropdown-menu__content {
   position: absolute;
   top: 100%;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   width: max-content;
   display: flex;
   flex-direction: column;
@@ -22,6 +23,7 @@
   box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.14);
   -webkit-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.14);
   -moz-box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.14);
+  z-index: 100;
 }
 
 .dropdown-list {
