[#117] Feat: 마이페이지 기능 구현 완료

--- a/pages/mypage/family/index.module.scss
+++ b/pages/mypage/family/index.module.scss
@@ -1,5 +1,5 @@
 .section {
-  padding: 126px 24px;
+  padding: 84px 24px 126px;
   .familyContainer {
     display: flex;
     flex-direction: column;
