--- a/components/mypage/family/add-family/add-family.module.scss
+++ b/components/mypage/family/add-family/add-family.module.scss
@@ -2,6 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  h2 {
+    font-size: 16px;
+  }
   .openModal {
     width: 20px;
     height: 20px;
