[#44] Design: 일정 등록 시각 인풋 스타일 변경
커서, 포커스 아웃라인, 가로 길이 등 수정

--- a/pages/calendar/create/create.module.scss
+++ b/pages/calendar/create/create.module.scss
@@ -116,17 +116,22 @@
 }
 
 .todoDateSelector {
-  display: flex;
+  width: 60%;
 }
 
 .input {
-  text-align: center;
+  text-align: right;
   color: var(--text-color-gray);
   font-weight: 600;
   font-size: 14px;
   border: none;
   align-self: last baseline;
-  width: fit-content;
+  width: 100%;
+  cursor: default;
+
+  &:focus-visible {
+    outline: none;
+  }
 }
 
 .year,
