--- a/components/diaries/diary-content/diary-content.module.scss
+++ b/components/diaries/diary-content/diary-content.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 15px;
-  width: 312px;
+  width: 100%;
   height: 142px;
   margin-bottom: 12px;
   border-radius: 10px;
