--- a/pages/diaries/[diaryId]/diary-id.module.scss
+++ b/pages/diaries/[diaryId]/diary-id.module.scss
@@ -1,13 +1,43 @@
 .outer {
   padding: 54px 24px 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
 }
 
+.inner {
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: none;
+}
 .profiles {
   display: flex;
   justify-content: space-between;
+  margin-top: 48px;
 }
 
 .content {
   width: 100%;
+  min-height: 100px;
   word-break: break-all;
+}
+
+.commentForm {
+  position: relative;
+}
+
+.commentInput {
+  width: 100%;
+  height: 44px;
+  border: 1px solid var(--text-color-gray);
+  border-radius: 9999px;
+  padding: 0 24px;
+}
+
+.commentButton {
+  position: absolute;
+  right: 24px;
+  top: 50%;
+  transform: translateY(-45%);
 }
