[#65] Feat: 다이어리 상세, 댓글 상세 권한에 따라 케밥 렌더 조건식 추가

--- a/pages/diaries/[diaryId]/diary-id.module.scss
+++ b/pages/diaries/[diaryId]/diary-id.module.scss
@@ -11,6 +11,17 @@
   overflow-y: scroll;
   scrollbar-width: none;
 }
+
+.date {
+  position: relative;
+  width: 100%;
+}
+
+.kebab {
+  position: absolute;
+  right: 0;
+}
+
 .profiles {
   display: flex;
   justify-content: space-between;
