--- a/components/diaries/diary-content/comment/diary-comment.module.scss
+++ b/components/diaries/diary-content/comment/diary-comment.module.scss
@@ -13,6 +13,10 @@
   color: var(--todo-category);
 }
 
+.commentContent {
+  margin: 10px 0;
+}
+
 .commentReply {
   font-size: 12px;
   color: var(--text-color-gray);
