--- a/components/calendar-monthly/calendar-todo.module.scss
+++ b/components/calendar-monthly/calendar-todo.module.scss
@@ -34,9 +34,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
   position: relative;
-  top: -12px;
   gap: 4px;
+  width: 24px;
 }
 
 .checkContainer {
