[#65] Design: 댓글 입력 중 인풋 색상 변경

--- a/pages/diaries/[diaryId]/diary-id.module.scss
+++ b/pages/diaries/[diaryId]/diary-id.module.scss
@@ -44,6 +44,11 @@
   border: 1px solid var(--text-color-gray);
   border-radius: 9999px;
   padding: 0 24px;
+
+  &:focus-visible {
+    outline: none;
+    border: 1px solid var(--main-color);
+  }
 }
 
 .commentButton {
