--- a/pages/diaries/[diaryId]/diary-id.module.scss
+++ b/pages/diaries/[diaryId]/diary-id.module.scss
@@ -12,24 +12,38 @@
   scrollbar-width: none;
 }
 
-.date {
+.dateKebab {
   position: relative;
   width: 100%;
+  margin-top: 30px;
+}
+
+.date {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
 }
 
 .kebab {
   position: absolute;
+  top: 50%;
   right: 0;
+  transform: translateY(-50%);
 }
 
 .profiles {
   display: flex;
   justify-content: space-between;
-  margin-top: 48px;
+  margin-top: 30px;
 }
 
 .content {
   width: 100%;
   min-height: 100px;
   word-break: break-all;
+}
+
+.line {
+  border-bottom: 1px solid var(--pet-border);
+  margin: 20px 0;
 }
