[#65] Design: 다이어리 상세 댓글 ui 조정

--- a/components/diaries/diary-content/comment/diary-comment.module.scss
+++ b/components/diaries/diary-content/comment/diary-comment.module.scss
@@ -1,5 +1,5 @@
 .outer {
-  padding: 16px;
+  padding: 0 16px 20px;
 }
 
 .commentProfile {
@@ -15,6 +15,7 @@
 
 .commentContent {
   margin: 8px 0;
+  font-size: 14px;
 }
 
 .commentReply {
