[#141] feat: 성장 기록 상세 ui 구현 완료

--- a/styles/color.css
+++ b/styles/color.css
@@ -21,4 +21,7 @@
   --input-description: #616161;
   --disabled-color: #c8c8c8;
   --clipboard-color: #e9e9eb;
+  --hospital-color: #9498ff;
+  --abnormalSymptom-color: #f5877e;
+  --snack-color: #ffb23f;
 }
