--- a/components/story/item/story-item-swiper.module.scss
+++ b/components/story/item/story-item-swiper.module.scss
@@ -1,6 +1,6 @@
 .swiper {
   margin: 12px 0;
-  height: 240px;
+  padding-bottom: 20px;
 
   :global(.swiper-pagination) {
     bottom: 0px;
@@ -21,7 +21,7 @@
 
 .image-wrapper {
   width: 100%;
-  height: 221px;
+  height: 240px;
   border-radius: 10px;
   overflow: hidden;
   position: relative;
