[#104] 다이어리 등록페이지 api 연결

--- a/components/diaries/diary-content/content-image/content-image.module.scss
+++ b/components/diaries/diary-content/content-image/content-image.module.scss
@@ -1,4 +1,6 @@
-.diarycontentImage {
-  display: flex;
-  align-items: flex-end;
+.diaryImage {
+  width: 79px;
+  height: 79px;
+  border-radius: 5px;
+  object-fit: cover;
 }
