--- a/components/growth/list/list-header/list-header.module.scss
+++ b/components/growth/list/list-header/list-header.module.scss
@@ -14,6 +14,18 @@
         font-weight: 600;
         color: var(--main-color);
       }
+      .snack {
+        color: var(--snack-color);
+      }
+      .food {
+        color: var(--main-color);
+      }
+      .abnormalSymptom {
+        color: var(--abnormalSymptom-color);
+      }
+      .hospital {
+        color: var(--hospital-color);
+      }
       .profileContainer {
         display: flex;
       }
