--- a/styles/color.css
+++ b/styles/color.css
@@ -21,7 +21,7 @@
   --input-description: #616161;
   --disabled-color: #c8c8c8;
   --clipboard-color: #e9e9eb;
-  --skeleton-cololr: #bbbbbb;
+  --skeleton-color: #bbbbbb;
   --hospital-color: #9498ff;
   --abnormalSymptom-color: #f5877e;
   --snack-color: #ffb23f;
