--- a/components/common/Header/Header.module.scss
+++ b/components/common/Header/Header.module.scss
@@ -7,6 +7,7 @@
   height: 54px;
   max-width: var(--global-width);
   left: 50%;
+  top: 0;
   transform: translateX(-50%);
   border-bottom: 1px solid var(--main-color);
   border-left: 1px solid #ddd;
