--- a/components/skeleton/mypage/pet/pet-form-skeleton.module.scss
+++ b/components/skeleton/mypage/pet/pet-form-skeleton.module.scss
@@ -1,3 +1,5 @@
+@import '../../skeleton-animation.module.scss';
+
 .section {
   padding: 126px 24px 51px;
   h2 {
@@ -11,7 +13,7 @@
     margin-top: 18px;
     margin-bottom: 49px;
     border-radius: 50%;
-    background-color: var(--skeleton-color);
+    @include skeleton-animation;
   }
   .inputBox {
     display: flex;
@@ -28,12 +30,12 @@
     width: 50px;
     height: 18px;
     border-radius: 10px;
-    background-color: var(--skeleton-color);
+    @include skeleton-animation;
   }
   div {
     width: 100%;
     height: 46px;
     border-radius: 10px;
-    background-color: var(--skeleton-color);
+    @include skeleton-animation;
   }
 }
