--- a/components/skeleton/growth/growth-list/growth-list.module.scss
+++ b/components/skeleton/growth/growth-list/growth-list.module.scss
@@ -1,3 +1,5 @@
+@import '../../skeleton-animation.module.scss';
+
 .container {
   width: 100%;
   height: 130px;
@@ -14,7 +16,7 @@
       width: 46px;
       height: 46px;
       border-radius: 100%;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
     }
     .subHeader {
       display: flex;
@@ -24,13 +26,13 @@
         width: 60px;
         height: 20px;
         border-radius: 10px;
-        background-color: var(--skeleton-color);
+        @include skeleton-animation;
       }
       .profile {
         width: 120px;
         height: 20px;
         border-radius: 10px;
-        background-color: var(--skeleton-color);
+        @include skeleton-animation;
       }
     }
   }
@@ -39,6 +41,6 @@
     width: 300px;
     height: 20px;
     border-radius: 10px;
-    background-color: var(--skeleton-color);
+    @include skeleton-animation;
   }
 }
