--- a/components/skeleton/calendar/calendar-list-skeleton.module.scss
+++ b/components/skeleton/calendar/calendar-list-skeleton.module.scss
@@ -1,3 +1,4 @@
+@import '../skeleton-animation.module.scss';
 .calendarListSkeleton {
   display: flex;
   flex-direction: column;
@@ -18,7 +19,7 @@
       .imgBox {
         width: 50px;
         height: 50px;
-        background-color: var(--skeleton-color);
+        @include skeleton-animation;
         border-radius: 50%;
       }
       .textBox {
@@ -29,13 +30,13 @@
           display: block;
           width: 104px;
           height: 18px;
-          background-color: var(--skeleton-color);
+          @include skeleton-animation;
           border-radius: 10px;
         }
         p {
           width: 134px;
           height: 20px;
-          background-color: var(--skeleton-color);
+          @include skeleton-animation;
           border-radius: 10px;
         }
       }
@@ -44,7 +45,7 @@
       width: 20px;
       height: 50px;
       border-radius: 10px;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
     }
   }
 }
