--- a/components/skeleton/mypage/pet/pet-image-skeleton.module.scss
+++ b/components/skeleton/mypage/pet/pet-image-skeleton.module.scss
@@ -1,3 +1,5 @@
+@import '../../skeleton-animation.module.scss';
+
 .petImageSkeleton {
   display: flex;
   align-items: center;
@@ -6,7 +8,7 @@
   li {
     width: 116px;
     height: 116px;
-    background-color: var(--skeleton-color);
+    @include skeleton-animation;
     border-radius: 50%;
   }
 }
