--- a/components/skeleton/mypage/profile-skeleton.module.scss
+++ b/components/skeleton/mypage/profile-skeleton.module.scss
@@ -1,3 +1,5 @@
+@import '../skeleton-animation.module.scss';
+
 .section {
   padding: 30px 24px 0px 24px;
   display: flex;
@@ -11,12 +13,12 @@
       width: 116px;
       height: 116px;
       border-radius: 50%;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
     }
     p {
       width: 173px;
       height: 23px;
-      background-color: var(--skeleton-color);
+      @include skeleton-animation;
       border-radius: 10px;
     }
   }
