[#145] feat: growth page skeleton 적용

--- a/pages/growth/growth.module.scss
+++ b/pages/growth/growth.module.scss
@@ -11,5 +11,10 @@
     gap: 12px;
     overflow-y: auto;
     max-height: 558px;
+    .skeletonContainer {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+    }
   }
 }
