fix: growth kebab 디자인 수정

--- a/components/growth/list/list-header/list-header.module.scss
+++ b/components/growth/list/list-header/list-header.module.scss
@@ -1,6 +1,7 @@
 .headerContainer {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   .wrapper {
     display: flex;
     gap: 6px;
