[#105] Feat: 패밀리 데이터 연동 완료

--- a/components/family/diary/item/family-diary-item.module.scss
+++ b/components/family/diary/item/family-diary-item.module.scss
@@ -64,8 +64,11 @@
   }
 
   .content-image {
+    position: relative;
     width: 67px;
     height: 67px;
     background-color: #eee;
+    border-radius: 5px;
+    overflow: hidden;
   }
 }
