--- a/components/family/growth/item/family-growth-item.module.scss
+++ b/components/family/growth/item/family-growth-item.module.scss
@@ -12,4 +12,7 @@
   height: 34px;
   border-radius: 8px;
   background-color: var(--white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
